# gnss-position-tracker

./: README.md  imports  pyproject.toml
data/processed/: gnss_log_2026_03_21_17_17_57.nmea
data/raw/: gnss_log_2026_03_21_17_14_34.26o  gnss_log_2026_03_21_17_17_57.26o
scripts/: extract_rinex.py
src/gnss_position_tracker/: __init__.py  config.py  rinex_extractor.py
tests/: test_structure.py
